--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
 
         <section id="telefone">
-
+            <iframe src="home.html" name="tela" frameborder="0" class="tela"></iframe>
         </section>
         <section id="redes sociais">
 
