atualizações no projeto

--- a/index.html
+++ b/index.html
@@ -14,9 +14,26 @@
     <main>
 
         <section id="telefone">
-            <iframe src="home.html" name="tela" frameborder="0" class="tela"></iframe>
+            <iframe src="home.html" name="tela" frameborder="0" class="tela"> seu navegador não é compatível</iframe>
+
         </section>
-        <section id="redes sociais">
+        <section id="redes-sociais">
+            <a href="home.html" target="tela"> <img src="pacote-d013/imagens/logo-home.jpg" alt="home"></a><br>
+
+            <a href="pacote-d013/imagens/tela-youtube.png" target="tela"> <img
+                    src="pacote-d013/imagens/logo-youtube.jpg" alt=""></a> <br>
+
+            <a href="pacote-d013/imagens/tela-github.jpg" target="tela"><img src="pacote-d013/imagens/logo-github.jpg"
+                    alt=""></a> <br>
+
+            <a href="pacote-d013/imagens/tela-instagram.jpg" target="tela"><img
+                    src="pacote-d013/imagens/logo-instagram.jpg" alt=""></a> <br>
+            <a href="pacote-d013/imagens/tela-twitter.jpg" target="tela"><img src="pacote-d013/imagens/logo-twitter.jpg"
+                    alt=""></a> <br>
+
+            <a href="pacote-d013/imagens/tela-facebook.jpg" target="tela"><img
+                    src="pacote-d013/imagens/logo-facebook.jpg" alt=""></a> <br>
+
 
         </section>
     </main>
