--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         body {
             height: 100vh;
             width: 100vw;
-            background: black url(pacote-d013/imagens/tela-home.jpg) no-repeat top center;
+            background: black url(pacote-d013/imagens/tela-home.jpg);
             background-size: cover;
         }
     </style>
